# qtCPlusPlus_deepseek_Plugin

./: .gitignore  AnalysisProm.txt  CMakeLists.txt  README.md  aa.json  aaa.txt  cmake_build.bat  createPlugin.bat  createPlugin.ps1  dependency_summary_template.txt  pack.bat  pack.ps1  readme.md
Plugin/: CMakeLists.txt
Plugin/AutoStartPlugin/include/: AutoStartPlugin.h  AutoStartPluginWidget.h  ProgramDialog.h
Plugin/AutoStartPlugin/res/: Resource.qrc
Plugin/AutoStartPlugin/src/: AutoStartPlugin.cpp  AutoStartPluginWidget.cpp  ProgramDialog.cpp
Plugin/AutoStartPlugin/ui/: AutoStartPluginWidget.ui
Plugin/DeepSeekPlugin/: CMakeLists.txt
Plugin/DeepSeekPlugin/include/: ChatFrame.h  DeepSeekModel.h  DeepSeekPlugin.h  DeepSeekPluginWidget.h  DeepSeekPlugin_global.h
Plugin/DeepSeekPlugin/res/: Resource.qrc
Plugin/DeepSeekPlugin/src/: ChatFrame.cpp  DeepSeekModel.cpp  DeepSeekPlugin.cpp  DeepSeekPluginWidget.cpp
Plugin/DeepSeekPlugin/ui/: DeepSeekPluginWidget.ui
Plugin/DeepSeekanalysisPlugin/: CMakeLists.txt
Plugin/DeepSeekanalysisPlugin/include/: DeepSeekModel.h  DeepSeekPlugin.h  DeepSeekPluginWidget.h  DeepSeekPlugin_global.h  FileAnalysisTask.h  projectanalysisdialog.h  sdialog.h
Plugin/DeepSeekanalysisPlugin/src/: AnalysisProm.md  DeepSeekPlugin.cpp  DeepSeekPluginWidget.cpp  FileAnalysisTask.cpp  projectanalysisdialog.cpp  sdialog - back.txt  sdialog.cpp
Plugin/DeepSeekanalysisPlugin/ui/: DeepSeekPluginWidget.ui  DeepSeekanalysisPluginWidget.ui
Plugin/ImageToIcoPlugin/include/: ImageToIcoPlugin.h  ImageToIcoWidget.h
Plugin/ImageToIcoPlugin/res/: Resource.qrc
Plugin/ImageToIcoPlugin/src/: ImageToIcoPlugin.cpp  ImageToIcoWidget.cpp
Plugin/ImageToIcoPlugin/ui/: ImageToIcoPlugin.ui
Plugin/ReplaceTemplatePlugin/include/: ReplaceTemplatePlugin.h  ReplaceTemplatePluginWidget.h  ReplaceTemplateThread.h
Plugin/ReplaceTemplatePlugin/res/: Resource.qrc
Plugin/ReplaceTemplatePlugin/src/: ReplaceTemplatePlugin.cpp  ReplaceTemplatePluginWidget.cpp  ReplaceTemplateThread.cpp
Plugin/ReplaceTemplatePlugin/ui/: ReplaceTemplatePluginWidget.ui
Plugin/TemplatePlugin/: CMakeLists.txt
Plugin/TemplatePlugin/include/: TemplatePlugin.h  TemplatePluginWidget.h
Plugin/TemplatePlugin/res/: Resource.qrc
Plugin/TemplatePlugin/src/: TemplatePlugin.cpp  TemplatePluginWidget.cpp
Test/: CMakeLists.txt  main.cpp
Test/include/: TestConfig.h
Test/src/: TestConfig.cpp
Tools/: CMakeLists.txt  main.cpp
Tools/include/: LogDialog.h  RemoveLogTask.h  Widget.h  center.h  configDialog.h  mainwindow.h
Tools/res/: Resource.qrc  version.rc
Tools/src/: LogDialog.cpp  RemoveLogTask.cpp  Widget.cpp  center.cpp  config.cpp  configDialog.cpp  mainwindow.cpp
Tools/ui/: center.ui
include/: QAbstractPlugin.h  config.h  utility.h
lib/: CMakeLists.txt
lib/DeepSeek/: CMakeLists.txt
lib/DeepSeek/include/: DeepSeek.h  DeepSeek_global.h
lib/DeepSeek/src/: DeepSeek.cpp
lib/LClass/: CMakeLists.txt
lib/LClass/LCore/include/: LConfig.h  LCore  LInIConfig.h  LInstanceMap.h  LJsonConfig.h  LLog.h  LSingleApplication.h  LSqlExecutor.h  LXmlConfig.h  func.h
lib/LClass/LCore/src/: LConfig.cpp  LInIConfig.cpp  LInstanceMap.cpp  LJsonConfig.cpp  LSingleApplication.cpp  LSqlExecutor.cpp  LXmlConfig.cpp  func.cpp
lib/LClass/LWidget/: CMakeLists.txt
lib/LClass/LWidget/include/: JZKWidget.h  LButton.h  LComboBox.h  LGraphicsEffect.h  LInstrumentBoard.h  LJZWidget.h  LNavigationBar.h  LProgressBar.h  LTextEdit.h  LWidget  llineedit.h
lib/LClass/LWidget/src/: JZKWidget.cpp  LButton.cpp  LComboBox.cpp  LGraphicsEffect.cpp  LInstrumentBoard.cpp  LJZWidget.cpp  LLineedit.cpp  LNavigationBar.cpp  LProgressBar.cpp  LTextEdit.cpp
lib/Utility/: CMakeLists.txt
lib/Utility/include/: AbstractPlugin.h  AbstractTask.h  DBModel.h  DeepSeek.h  Logger.h  QAbstractPlugin.h  Utility_global.h  config.h  utility.h
lib/Utility/src/: AbstractPlugin.cpp  AbstractTask.cpp  DBModel.cpp  DeepSeek.cpp  Logger.cpp  QAbstractPlugin.cpp  config.cpp  utility.cpp
lib/spdlog/cmake/: ide.cmake
others/: cmake_build.bat  cmake_build.ps1  pack.bat
others/AutoStartPlugin/: CMakeLists.txt
others/AutoStartPlugin/include/: AutoStartPlugin_global.h
others/ImageToIcoPlugin/: CMakeLists.txt
others/ImageToIcoPlugin/include/: ImageToIcoPlugin_global.h  ImageToIcoWidget.h
others/ImageToIcoPlugin/src/: ImageToIcoPlugin.cpp  ImageToIcoWidget.cpp
others/ImageToIcoPlugin/ui/: ImageToIcoPlugin.ui
others/ReplaceTemplatePlugin/: CMakeLists.txt
others/ReplaceTemplatePlugin/include/: ReplaceTemplatePlugin_global.h
others/ReplaceTemplatePlugin/ui/: ReplaceTemplatePluginWidget.ui
others/TemplatePlugin/include/: TemplateModel.h  TemplatePlugin_global.h
others/TemplatePlugin/src/: TemplateModel.cpp
others/TemplatePlugin/ui/: TemplatePluginWidget.ui
